# brainmatch

./: .gitignore  README.md  pull_issues.sh  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  setup_helpers.py
.github/workflows/: test_package.yml
brainmatch/: brainmatch.py  info.py
brainmatch/tests/: test_brainmatch.py
data/: __init__.py  expected_match.csv  expected_match_global.csv  expected_match_global_top.csv  expected_match_top.csv  fields.json  participant_registration.csv  projects.tsv
scripts/: compute_brainmatch_scores.py
scripts/tests/: test_compute_brainmatch_scores.py
tools/: pull_issues.sh
