[metadata]
author = brainhack
author_email = brainhackorg@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Medical Science Apps.
description = Brainhack event project to attendee matching tool
download_url = https://github.com/brainhackorg/brainmatch
keywords = hackathon, neneuroscience, open science, open source
long_description = file: README.md
maintainer = brainhack
maintainer_email = brainhackorg@gmail.com
name = brainmatch

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    pandas == 1.3.4
scripts =
    scripts/compute_brainmatch_scores.py
    tools/pull_issues.sh

[options.extras_require]
testing =
    flake8 == 3.7.9
    numpy
    pytest == 5.3.*
    pytest-cov
    pytest-pep8
    pytest-xdist
    pytest_console_scripts
dev =
    %(testing)s
